[package]
name = "fleischwolf-cli"
description = "Command-line interface for Fleischwolf (the `fleischwolf` binary; a Rust port of docling)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "text-processing"]
rust-version.workspace = true

[[bin]]
name = "fleischwolf"
path = "src/main.rs"

[features]
# Pass through to the library's optional headless-browser HTML pre-render, so
# `cargo run -p fleischwolf-cli --features web-browser -- --use-web-browser …`
# activates it. Off by default (keeps the default binary browser-dependency-free).
web-browser = ["fleischwolf/web-browser"]

[dependencies]
fleischwolf = { path = "../fleischwolf", version = "0.16.0" }
