[package]
name = "fleischwolf-pdf"
description = "PDF/image backend for Fleischwolf: pdfium text extraction + ONNX layout/table/OCR pipeline."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# pdfium-render / ort need a newer compiler than the std-only crates' MSRV.
rust-version = "1.82"

[dependencies]
fleischwolf-core = { path = "../fleischwolf-core", version = "0.5.0" }
pdfium-render = "0.8"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
image = "0.25"
flate2 = "1"
tar = "0.4"
regex = "1.11"
lopdf = "0.34"

[lib]
name = "fleischwolf_pdf"
